# Stock-Analysis

./: .gitignore  AGENTS.md  DATA_MODEL.md  DECISION_OUTPUT_MODEL.md  Makefile  PRODUCT_SPEC.md  READINESS_MODEL.md  README.md  ROADMAP.md  config.yaml  dashboard.py  pyproject.toml  run.py
config/: readiness.yml
data/: analyst_estimates_import_rejected.csv  dcf_readiness.csv  earnings_readiness.csv  fundamentals.csv  holdings.csv  peers.csv  price_import_rejected.csv  prices.csv  theme_map.csv  universe.csv  universe_active.csv  universe_master.csv
docs/: LINKEDIN_PROJECT_BRIEF.md  PUBLIC_RELEASE_CHECKLIST.md
outputs/: correlation_risk.csv  data_quality_wizard.csv  final_watchlist.csv  liquidity_risk.csv  market_direction.csv  momentum_leaders.csv  monthly_research_picks.csv  portfolio_review.csv  purpose_classification.csv  purpose_evaluation_summary.csv  research_action_queue.csv  research_decisions.csv  undervalued_candidates.csv
scripts/: validate_all.sh
src/: __init__.py  action_queue.py  config.py  dashboard.py  data_onboarding.py  data_sources.py  data_update.py  dcf_readiness.py  indicators.py  loader.py  manual_fundamentals_import.py  manual_optional_context_import.py  manual_price_import.py  market_direction.py  momentum_engine.py  monthly_picks.py  optional_context_readiness.py  paths.py  portfolio_review.py  project_status.py  purpose_evaluation.py  purpose_router.py  readiness_engine.py  report_generator.py  research_decisions.py  research_health.py  risk.py  state_machine.py  stock_report.py  track_record.py  universe_model.py  valuation.py  (+1 more)
(+82 files in other folders)
